@@ -65,6 +65,7 @@ aTunes 2.1.0
 - FIX: Rename radio label only applies to one label at a time
 - FIX: Value of "Disc" in tag editor is not saved [3005921]
 - FIX: Avoid ConcurrentModificationException while reading repository
+- FIX: Ctrl-click not working in Mac OS X
 
 aTunes 2.0.1
 -------------
